--- a/css/index.css
+++ b/css/index.css
@@ -93,3 +93,32 @@ img:hover {
     margin-top: -300px;
     /* margin-right: 10px; */
 }
+
+.form-colls{
+    display: flex;
+    justify-content: space-between;
+    column-gap: 20px;
+    flex-wrap: wrap;
+}
+
+form{
+    margin: auto;
+    width: max-content;
+    text-align: right;
+}
+
+textarea{
+    background-color: inherit;
+    width: 590px;
+    resize: none;
+    height: 150px;
+    margin-top: 30px;
+    border-left:2px solid #fff;
+    border-right:2px solid #fff;
+    padding-left:20px;
+    outline:none;
+    color:#fff;
+}
+::placeholder{
+  color: #fff;
+}
