--- a/css/index.css
+++ b/css/index.css
@@ -122,3 +122,49 @@ textarea{
 ::placeholder{
   color: #fff;
 }
+
+#contactus{
+    text-align: center;
+    color: #fff;
+    padding: 70px 20px 20px 20px;
+    background-image: url(../backgrounds/c_image.jpg);
+    width: 100%;
+    height: 450px;
+}
+
+input[type=text],input[type=email]{
+    width: 300px;
+    background-color: inherit;
+    border: 0.5px solid rgba(255, 255, 255,0.5);
+    border-left:2px solid #fff;
+    padding-left:20px;
+    outline:none;
+    color:#fff;
+}
+
+input[type=submit]{
+    width:100%;
+    color: #fff;
+    background-color: inherit;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255,0.7);
+    text-align: center;
+    transition: 2s;
+}
+
+input[type=submit]:hover{
+    color: black;
+    background-color: rgba(255, 255, 255,0.7);
+}
+.footer{
+    padding: 20px;
+}
+.follow-like{
+    display: flex;
+   justify-content: center;
+}
+
+.pim{
+    display: flex;
+    justify-content: center;
+}
