changes in html and css

--- a/css/index.css
+++ b/css/index.css
@@ -69,7 +69,7 @@ img:hover {
   
 .what{
       display: flex;
-      justify-content: space-between;
+      /* justify-content: space-between; */
       flex-direction: column;
 }
 
