--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,7 @@
 }
 
 .head{
-    background-image: url(/backgrounds/h_img.jpg);
+    background-image: url(../backgrounds/h_img.jpg);
     height: 100%;
 }
 
